# aws-pydantic

./: hacks.py  handler.py  pyproject.toml
aws_schemas/: account.py  acm-pca.py  acm.py  config.py  ec2.py  kms.py  monitoring.py  rds.py  route53.py
templates/: atomic.j2  enum.j2  imports.j2  list.j2  structure.j2  update_ref.j2
